--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,8 @@ a {
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     padding: 10px 25px 10px 25px ;
+
+
    
 
 }
@@ -77,16 +79,17 @@ line-height: 32px;
 text-align: left;
 text-underline-position: from-font;
 text-decoration-skip-ink: none;
-margin-top: 60px;
+margin-top: 100px;
 
 }
-headerCta h1{
+#headerCta h1{
     font-family: Poppins;
     font-style: normal;
-font-size: 60px;
+font-size: 40px;
 font-weight: bold;
 text-align: left;
 margin-top: 60px;
+
 
 }
 #headerImg{
@@ -94,6 +97,23 @@ margin-top: 60px;
  margin-top: 60px;
 
 }
-headerImg{
+#headerImg{
     height: 100%;
+}
+.headerLogo{
+    text-align: center;
+}
+#clients{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+#headerClientText{
+    font-family: Poppins;
+font-size: 15px;
+font-style: normal;
+line-height: 24px;
+text-align: left;
+text-underline-position: from-font;
+text-decoration-skip-ink: none;
+
 }
