--- a/css/style.css
+++ b/css/style.css
@@ -65,55 +65,114 @@ a {
     text-align: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-    padding: 10px 25px 10px 25px ;
+    padding: 10px 25px 10px 25px;
 
 
-   
+
 
 }
-#headerCta{
-font-family: Poppins;
-font-size: 16px;
-font-weight: 400;
-line-height: 32px;
-text-align: left;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
-margin-top: 100px;
+
+#headerCta {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    margin-top: 100px;
 
 }
-#headerCta h1{
+
+#headerCta h1 {
     font-family: Poppins;
     font-style: normal;
-font-size: 40px;
-font-weight: bold;
-text-align: left;
-margin-top: 60px;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: left;
+    margin-top: 60px;
 
 
 }
-#headerImg{
+
+#headerImg {
     margin-left: 42px;
- margin-top: 60px;
+    margin-top: 60px;
 
 }
-#headerImg{
+
+#headerImg {
     height: 100%;
 }
-.headerLogo{
+
+.headerLogo {
     text-align: center;
 }
-#clients{
+
+#clients {
     margin-top: 50px;
     margin-bottom: 50px;
 }
-#headerClientText{
-    font-family: Poppins;
-font-size: 15px;
-font-style: normal;
-line-height: 24px;
-text-align: left;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
 
+#headerClientText {
+    font-family: Poppins;
+    font-size: 15px;
+    font-style: normal;
+    line-height: 24px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+
+}
+
+h3.red {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #F75C4E;
+}
+
+h1.black {
+    font-family: Poppins;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 54px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: black;
+    margin: 0px;
+}
+.textCenter{
+    text-align: center;
+    margin-top: 30px;
+}
+#service .textCenter h3 {
+    font-family: Poppins;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: black;
+}
+
+#
+
+p.gray{
+    font-family: Poppins;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 32px;
+color: #575455;
+text-align: center;
+}
+#textCta{
+    text-align: left;
 }
