--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,34 @@
 /* Reset básico */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 
 body {
     margin-left: 15%;
     margin-right: 15%;
+    font-family: Poppins;
 }
 
 .container {
-
-
     display: grid;
     grid-auto-flow: column;
-  grid-auto-columns: 1fr;
+    grid-auto-columns: 1fr;
 
 }
 
 header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     margin-top: 20px;
+
 }
 
 #header {
-    
+
     font-size: 28px;
     font-weight: 600;
     line-height: 42px;
     text-align: left;
-    text-decoration-line: underline;
+    text-decoration-line: none;
     color: #070F18;
 }
 
@@ -45,13 +40,14 @@ header {
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    gap: 20px;
+
 }
 
 #menu li {
     font-size: 16px;
     font-weight: 400;
     color: #070F18;
+    margin-left: 20px;
 }
 
 a {
@@ -61,24 +57,35 @@ a {
 
 /* Chamada para Ação (CTA) */
 #headerCta {
-    text-align: center;
-    margin-top: 60px;
+    text-align: left;
+    margin-top: 20px;
 }
 
 #headerCta h1 {
-    font-size: 40px;
+    font-family: Poppins;
+    font-size: 45px;
     font-weight: 700;
-    margin-bottom: 20px;
+    line-height: 82.5px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+
 }
 
 .gray {
-    color: #575455;
+    font-family: Poppins;
     font-size: 16px;
+    font-weight: 400;
     line-height: 32px;
-    text-align: center;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #575455;
 }
 
+
 #buttonCta {
+    font-family: Poppins;
     background-color: #1F7CFF;
     color: white;
     border-radius: 50px;
@@ -87,7 +94,7 @@ a {
     padding: 10px 25px;
     text-decoration: none;
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 .headerImg {
@@ -108,7 +115,9 @@ a {
 }
 
 #headerClientText {
+    font-family: Poppins;
     font-size: 18px;
+    text-align: left;
     font-weight: 600;
     margin-bottom: 30px;
 }
@@ -125,8 +134,8 @@ a {
 
 /* Seção de Serviços */
 #services {
-    margin-top: 80px;
-  
+    margin-top: 0px;
+    text-align: center;
 }
 
 #services h3.red {
@@ -193,29 +202,85 @@ a {
     width: 100%;
     max-width: 600px;
     height: auto;
+    border-radius: 20px;
 }
 
 #contactForm {
-    margin-top: 40px;
-    text-align: center;
+    margin-top: 80px;
+    text-align: left;
+    margin-left: 60px;
+
 }
 
 #contactForm h2.red {
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 15px;
     color: #F75C4E;
+
+    text-align: left;
 }
 
 #contactForm h1.black {
-    font-size: 36px;
-    font-weight: 700;
+    font-size: 30px;
     color: black;
     margin: 20px 0;
+    text-align: left;
 }
 
 #contactForm p.gray {
-    font-size: 16px;
+    font-size: 12px;
     color: #575455;
     line-height: 32px;
+
+}
+
+#contactForm input {
+    background-color: #F5F6FB;
+    border-radius: 50px;
+    font-family: Poppins;
+    font-size: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 24px;
+    color: #575455;
+    border: 0;
+    width: 70%;
+    text-align: left;
+    padding: 15px 25px 15px 25px;
+}
+
+#contactForm  form button {
+    font-family: Poppins;
+    background-color: #1F7CFF;
+    color: white;
+    border-radius: 50px;
+    font-size: 12px;
+    padding: 10px 25px;
+    text-decoration: none;
+    display: inline-block;
+    margin-top: 20px;
+    text-align: left;
+    border: 0;
+}
+/* Seção de Portifolio */
+#portifolioTitle{
+ margin-top: 80px;
+}
+.portifolioRed{
+
+    font-size: 15px;
+    color: #F75C4E;
+    text-align: left;
+}
+.portifolioBlack{
+    font-size: 30px;
+    color: black;
+    margin: 20px 0;
+    text-align: left;
+}
+.portifolioImg{
+    padding: 20px;
+}
+.portifolioImg img{
+    width: 100%;
 }
 
